<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98b999"
    tools:context=".view.AddMaintenanceTask">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!--<ImageView
                android:id="@+id/imageViewCollapsing"
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tree6"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/description_tree"/>-->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/position_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/position_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                tools:fontFamily="sans-serif"
                tools:textSize="18sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="107dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="#82ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/position_label">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lat_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/lat_label"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:typeface="sans" />

                        <EditText
                            android:id="@+id/editTextLat"
                            android:layout_width="90dp"
                            android:layout_height="38dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:background="@android:color/white"
                            android:ems="10"
                            android:hint="@string/hint_position"
                            tools:ignore="Autofill"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:typeface="sans" />

                        <TextView
                            android:id="@+id/long_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/long_label"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:typeface="sans" />

                        <EditText
                            android:id="@+id/editTextLong"
                            android:layout_width="90dp"
                            android:layout_height="38dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:background="@android:color/white"
                            android:ems="10"
                            android:hint="@string/hint_position"
                            tools:ignore="Autofill"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:typeface="sans" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/localisation_button"
                        android:layout_width="126dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:text="@string/localiser_button"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="sans" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/adresse_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:textSize="18sp" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="0dp"
                android:layout_height="87dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/hint_add_desc"
                tools:ignore="Autofill"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="16sp"
                android:typeface="sans"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_label" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/description_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddress"
                tools:textSize="18sp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/hint_add_desc"
                tools:ignore="Autofill"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="16sp"
                android:typeface="sans"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_label" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>